💄 Fix layout issues when resizing DevTools in tab

--- a/themes/shared/browser-box.css
+++ b/themes/shared/browser-box.css
@@ -20,8 +20,33 @@
     visibility: visible;
     flex: 1;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 0;
+}
+
+.browserStack {
+    display: grid;
+    /* Responsive mode overrides this which causes a bug where DevTools can overlay the RM toolbar */
+    min-width: 25px !important;
+    min-height: 25px !important;
+    flex: 1;
 }
 
 .browserContainer {
+    position: relative;
     flex-direction: column;
+}
+
+.browserContainer.responsive-mode>.rdm-toolbar {
+    z-index: 1;
+}
+
+.browserContainer.responsive-mode>.browserStack {
+    /* The RM toolbar overlays the browser scrollbar. Bug 1624283 */
+    margin-top: 29px;
+}
+
+.devtools-toolbox-bottom-iframe {
+    z-index: 1;
 }
